--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -12,11 +12,11 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  tests:
-    uses: ./.github/workflows/run-tests.yml
+  #tests:
+  #  uses: ./.github/workflows/run-tests.yml
   build-docker-amd64:
-    needs: [tests]
-    runs-on: buildjet-2vcpu-ubuntu-2204
+  #  needs: [tests]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
